# SyndromeKNNClassification

./: .gitignore  README.md  cross_validation.py  data_exploration.py  knn.py  pyproject.toml
tests/: test_knn.py
